fixed overflow problem

--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,8 @@
 }
 body {
   font-family: var(--default-font-family);
-  max-width: 100vw;
 }
+
 h1,
 h2,
 h3,
